@@ -760,4 +760,10 @@ nk_layout_peek(struct nk_rect *bounds, struct nk_context *ctx)
     layout->at_y = y;
     layout->row.index = index;
 }
+NK_API void 
+nk_spacer(struct nk_context *ctx )
+{
+    struct nk_rect dummy_rect = {0};
+    nk_panel_alloc_space( &dummy_rect, ctx );
+}
 
